--- a/WSUI.Module/View/AllFilesDataView.xaml
+++ b/WSUI.Module/View/AllFilesDataView.xaml
@@ -141,10 +141,15 @@
                     <RowDefinition Height="*" />
                     <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                
-                <ListBox x:Name="FileListBox" ItemsSource="{Binding Path=FileSource,UpdateSourceTrigger=PropertyChanged}"
+
+                <listBox:OFListBox x:Name="FileListBox" ItemsSource="{Binding Path=FileSource,UpdateSourceTrigger=PropertyChanged}"
                             ItemTemplateSelector="{StaticResource templateSelector}"
+                                   Style="{StaticResource SimpleListBoxStyle}"
+                                     ItemContainerStyle="{StaticResource SimpleListBoxItemStyle}"
+                                     BorderBrush="Transparent"
+                                     Background="Transparent"
                             attch:OFListBoxSelectedObjectAttachedProperty.SelectedObject="{Binding Current,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                                   attch:OFListBoxShouldSetSelectAttachedProperty.ShouldSetSelect="True"
                             HorizontalContentAlignment="Stretch" 
                             ScrollViewer.CanContentScroll="False"
                             ScrollViewer.HorizontalScrollBarVisibility="Hidden" 
@@ -158,7 +163,7 @@
                     <ListBox.ContextMenu>
                         <ContextMenu ItemsSource="{Binding FileMenuItems,UpdateSourceTrigger=PropertyChanged}"></ContextMenu>
                     </ListBox.ContextMenu>
-                </ListBox>
+                </listBox:OFListBox>
 
                 <StackPanel x:Name="FileMorePanel" Orientation="Horizontal" HorizontalAlignment="Right"
                             Grid.Row="1"
