--- a/OF.OutlookFinderSetupUI/MainWindow.xaml
+++ b/OF.OutlookFinderSetupUI/MainWindow.xaml
@@ -54,8 +54,8 @@
                     </Style>
                 </StackPanel.Resources>
                 <Button x:Name="ButtonInstall" Content="Install" Visibility="{Binding InstallVisibility,UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsEnabled,UpdateSourceTrigger=PropertyChanged}"  Click="OnButtonClick" />
-                <Button x:Name="ButtonUninstall" Content="Uninstall" Visibility="{Binding UnistallVisibility, UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsEnabled,UpdateSourceTrigger=PropertyChanged}" Click="OnButtonClick" />
-                <Button x:Name="ButtonQuit" Content="Quit" Click="OnButtonClick" IsEnabled="{Binding IsEnabled,UpdateSourceTrigger=PropertyChanged}"/>
+                <Button x:Name="ButtonUninstall" Content="Uninstall" Visibility="{Binding UnistallVisibility,UpdateSourceTrigger=PropertyChanged}" IsEnabled="{Binding IsEnabled,UpdateSourceTrigger=PropertyChanged}" Click="OnButtonClick" />
+                <Button x:Name="ButtonQuit" Content="{Binding CancelButtonName,UpdateSourceTrigger=PropertyChanged}" Click="OnButtonClick" IsEnabled="{Binding IsEnabled,UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
         </Grid>
         
