--- a/OF.OutlookFinderSetup/Bundle.wxs
+++ b/OF.OutlookFinderSetup/Bundle.wxs
@@ -1,9 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi" xmlns:bal="http://schemas.microsoft.com/wix/BalExtension" xmlns:util="http://schemas.microsoft.com/wix/UtilExtension" xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension">
   <?define LibsDir="$(var.SolutionDir)/Toolkits/WixWPF/" ?>
-  <Bundle Name="OutlookFinder" Version="1.0.2.946" Manufacturer="FruitFactory" UpgradeCode="1fca87ea-4d43-499c-8163-931e88304ba9" IconSourceFile="Image\logo_64.ico" DisableModify="yes" DisableRemove="no">
+  <Bundle Name="OutlookFinder" Version="1.0.2.964" Manufacturer="FruitFactory" UpgradeCode="DC120454-63AF-4DAA-87EC-215FECCA4A64" IconSourceFile="Image\logo_64.ico" DisableModify="yes" DisableRemove="yes">
     <BootstrapperApplicationRef Id="ManagedBootstrapperApplicationHost">
-      <!--<bal:WixStandardBootstrapperApplication LicenseFile="License.rtf" LogoFile="Image\logo_64.ico" SuppressOptionsUI="yes" ShowVersion="yes" />-->
       <Payload SourceFile="BootstrapperCore.config" />
       <Payload SourceFile="$(var.LibsDir)WixWPF.dll" />
       <Payload SourceFile="$(var.OF.OutlookFinderSetupUI.TargetPath)" />
@@ -16,7 +15,7 @@
         <RemotePayload ProductName="jre-8u65-windows-i586.exe" Description="Java Platform SE binary" Size="50130016" Version="8.0.650.17" Hash="5e0b4ef55faf1de9b4b85d769bfe0899481c5d79" />
       </ExePackage>
       <RollbackBoundary Id="Rollback"></RollbackBoundary>
-      <MsiPackage SourceFile="$(var.TargetDir)\OutlookFinder.msi" DisplayInternalUI="yes" />
+      <MsiPackage Id="OutlookFinder" SourceFile="$(var.TargetDir)\OutlookFinder.msi" DisplayName="OutlookFinder" Visible="yes" DisplayInternalUI="yes" Vital="yes"></MsiPackage>
     </Chain>
   </Bundle>
 </Wix>
