--- a/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
+++ b/WSUI.OutlookPlugin/WSUI.OutlookPluginSetup/Product.wxs
@@ -57,6 +57,9 @@
     <CustomAction Id="InstallElasticSearch" BinaryKey="managedAction" DllEntry="InstallElasticSearch" Execute="deferred" Impersonate="no" Return="check" />
     <CustomAction Id="UnInstallElasticSearch" BinaryKey="managedAction" DllEntry="UnInstallElasticSearch" Execute="deferred" Impersonate="no" Return="check" />
     <CustomAction Id="CheckVersion" BinaryKey="managedAction" DllEntry="CheckVersion" Execute="immediate" Return="check" />
+    <CustomAction Id="InstallRules" BinaryKey="managedAction" DllEntry="InstallRules" Execute="immediate" Return="check"></CustomAction>
+    <CustomAction Id="UninstallRules" BinaryKey="managedAction" DllEntry="UninstallRules" Execute="immediate" Return="check"></CustomAction>
+    
     <InstallExecuteSequence>
       <RemoveExistingProducts After="InstallInitialize" />
       <Custom Action="RegisterDll" After="SelfRegModules">NOT Installed</Custom>
@@ -65,11 +68,13 @@
       <Custom Action="CheckVersion" Before="InstallInitialize" />
       <Custom Action="UnInstallElasticSearch" After="UnregisterDll">Installed</Custom>
       <Custom Action="Deactivate" Before="InstallInitialize">Installed</Custom>
-      <Custom Action="StopServiceApp" After="Deactivate">Installed</Custom>
+      <Custom Action="UninstallRules" After="Deactivate">Installed</Custom>
+      <Custom Action="StopServiceApp" After="UninstallRules">Installed</Custom>
       <Custom Action="DeleteFiles" After="InstallFinalize">REMOVE="ALL"</Custom>
       <Custom Action="SetInstallElasticSearchProperties" Before="InstallFinalize">NOT Installed</Custom>
       <Custom Action="InstallElasticSearch" After="SetInstallElasticSearchProperties">NOT Installed</Custom>
       <Custom Action="StartServiceApp" After="InstallFinalize">NOT Installed</Custom>
+      <Custom Action="InstallRules" After="StartServiceApp">NOT Installed</Custom>
       <Custom Action="ClosePrompt" Before="InstallValidate">NOT Installed OR Installed OR REMOVE="ALL"</Custom>
       <Custom Action="SuccesMessage" OnExit="success">NOT Installed</Custom>
       <Custom Action="CancelMessage" OnExit="cancel">NOT Installed</Custom>
@@ -262,9 +267,8 @@
         <File Id="_Nest_dll" Name="Nest.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_Newtonsoft_Json_dll" Name="Newtonsoft.Json.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="pstriver_1_0_SNAPSHOT_zip" Name="pstriver-1.0-SNAPSHOT.zip" Source="$(var.SolutionDir)PSTRiverPlugin\target\releases\" />
-        <File Id="_serviceapp_exe_" Name="serviceapp.exe" Source="$(var.OF.OutlookPlugin.TargetDir)">
-          <fire:FirewallException Id="_serviceapp_exe_firewall" Name="Service Application for OutlookFinder" Port="11223" Protocol="tcp" Scope="any"></fire:FirewallException>
-        </File>
+        <File Id="_serviceapp_exe_" Name="serviceapp.exe" Source="$(var.OF.OutlookPlugin.TargetDir)" />
+        <File Id="_firewallrules_exe_" Name="firewallrules.exe" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_Nancy_dll_" Name="Nancy.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
         <File Id="_Nancy_Hosting_Self_dll_" Name="Nancy.Hosting.Self.dll" Source="$(var.OF.OutlookPlugin.TargetDir)" />
       </Component>
@@ -290,10 +294,8 @@
         <File Id="_elasticsearch_in_bat" Name="elasticsearch.in.bat" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
         <File Id="_elasticsearch_service_mgr_exe" Name="elasticsearch-service-mgr.exe" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\"></File>
         <File Id="_elasticsearch_service_x64_exe" Name="elasticsearch-service-x64.exe" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\">
-          <fire:FirewallException Id="_elasticsearch_service_x64_exe_firewall" Name="Elasticsearch Service x64" Port="9200" Protocol="tcp" Scope="any"></fire:FirewallException>
         </File>
         <File Id="_elasticsearch_service_x86_exe" Name="elasticsearch-service-x86.exe" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\">
-          <fire:FirewallException Id="_elasticsearch_service_x86_exe_firewall" Name="Elasticsearch Service x86" Port="9200" Protocol="tcp" Scope="any"></fire:FirewallException>
         </File>
         <File Id="_elasticsearch_in_sh" Name="elasticsearch.in.sh" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
         <File Id="_plugin_" Name="plugin" Source="$(var.SolutionDir)Toolkits\Elasticsearch\bin\" />
